# markwrite

./: .cz.json  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  dprint.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit-on-push.yml  dependency-review.yml  devskim.yml  general.yml  pre-commit.yml  scorecard.yml  validate-licenses.yml
fixtures/: custom.dict  file.md
src/: lib.rs  main.rs
src/grammar/: mod.rs  tests.rs
src/html_process/: dom.rs  mod.rs  tests.rs
src/inline_html/: mod.rs
src/markdown/: mod.rs  tests.rs
src/resources/: live_reload.js  prism-one-dark.css  prism-one-light.css  prism.js  styles.css  theme.js
src/url_utility/: mod.rs
src/utilities/: stack.rs
templates/: template.html
tests/: cli.rs
