[package]
name = "markwrite"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/markwrite"
# clap 4.5.0 rasises MSRV to 1.74
rust-version = "1.74"
description = "Markdown writing CLI tool"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "markwrite"

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.82"
askama = "0.12.1"
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
deunicode = "1.4.4"
env_logger = "0.11"
futures = "0.3"
html5ever = "0.26.0"
indicatif = "0.17.6"
log = "0.4"
nom = { version = "7.1.3", features = ["alloc"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
owo-colors = "3.5.0"
pulldown-cmark = "0.12.2"
pulldown-cmark-escape = "0.10.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.113"
textwrap = "0.16.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
yaml-rust2 = "0.8"

[dev-dependencies]
assert_cmd = "2.0.13"
assert_fs = "1"
fake = "2.9"
markup5ever_rcdom = "0.2.0"
predicates = "3.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[profile.release]
strip = "debuginfo"
