[package]
name = "markwrite"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/markwrite"
# clap 4.5.0 rasises MSRV to 1.74
rust-version = "1.74"
description = "Markdown writing CLI tool"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "markwrite"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.93"
askama = "0.12.1"
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "3.0.1"
deunicode = "1.6.0"
env_logger = "0.11.5"
futures = "0.3.31"
html5ever = "0.26.0"
indicatif = "0.17.6"
log = "0.4.22"
nom = { version = "7.1.3", features = ["alloc"] }
notify = "7.0.0"
notify-debouncer-mini = "0.4.1"
owo-colors = "3.5.0"
pulldown-cmark = "0.10.3"
pulldown-cmark-escape = "0.10.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
textwrap = "0.16.1"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
yaml-rust2 = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1"
fake = "2.9"
markup5ever_rcdom = "0.2.0"
predicates = "3.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[profile.release]
strip = "debuginfo"
