[package]
name = "markwrite"
version = "0.0.1"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/markwrite"
# clap 4.5.0 raises MSRV to 1.74
rust-version = "1.74"
description = "Markdown writing CLI tool"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "markwrite"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.97"
askama = "0.12.1"
clap = { version = "4.5.32", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
deunicode = "1.6.1"
env_logger = "0.11.7"
futures = "0.3.31"
html5ever = "0.26.0"
indicatif = "0.17.11"
log = "0.4.26"
nom = { version = "8.0.0", features = ["alloc"] }
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"
owo-colors = "4.2.0"
pulldown-cmark = "0.10.3"
pulldown-cmark-escape = "0.10.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
textwrap = "0.16.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
yaml-rust2 = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
fake = "4.0.0"
markup5ever_rcdom = "0.2.0"
predicates = "3.1.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[profile.release]
strip = "debuginfo"
